fix: ensure html overflow is hidden

--- a/.theme/src/styles/reset.less
+++ b/.theme/src/styles/reset.less
@@ -6,8 +6,7 @@ body {
 
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-  overflow: hidden overlay;
-
+  overflow: hidden;
   // https://developer.mozilla.org/en-US/docs/Web/CSS/hyphens
   hyphens: auto;
 
